--- a/src/Frontend/korp-frontend/src/app/layout/main-layout/main-layout.component.html
+++ b/src/Frontend/korp-frontend/src/app/layout/main-layout/main-layout.component.html
@@ -28,8 +28,8 @@
                     <span>Produtos</span>
                 </button>
 
-                <button class="nav-item" [class.active]="isActive('/notas-fiscais')"
-                    (click)="navigateTo('/notas-fiscais')">
+                <button class="nav-item" [class.active]="isActive('/notas-fiscais/lista')"
+                    (click)="navigateTo('/notas-fiscais/lista')">
                     <i class="material-icons">description</i>
                     <span>Notas</span>
                 </button>
